# searchfox-api

./: Cargo.toml
examples/: dump-response.rs
src/: api.rs
src/api/: response.rs  test_response.rs
tests/: BrowserChild.json  README.md
