[package]
name = "searchfox-api"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1.0.94", "features" = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
failure = "0.1.5"
maplit = "1.0.1"
reqwest = "0.9.18"
structopt = "0.2.18"
